<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.practical.aldnoah.lab22profile.MainActivity">

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="320dp"
        android:layout_height="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lblEmail"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="320dp"
        android:layout_height="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lblName"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfie"
        app:layout_constraintVertical_bias="0.093" />

    <ImageView
        android:id="@+id/imageViewProfie"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/descImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <ImageButton
        android:id="@+id/imageButtonWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/descWeb"
        android:onClick="sendMail"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonMail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        app:srcCompat="@drawable/ic_mail_outline_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/imageButtonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/descHome"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonWeb"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        app:srcCompat="@drawable/ic_home_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/imageButtonMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/descMail"
        android:onClick="showDial"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonDial"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        app:srcCompat="@drawable/ic_phone_android_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/imageButtonDial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/descDial"
        android:onClick="showWeb"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        app:srcCompat="@drawable/ic_web_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="251dp"
        android:onClick="updateProfile"
        android:text="@string/lblButtonUpdate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfie" />

</android.support.constraint.ConstraintLayout>
